--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -55,7 +55,6 @@
           <a routerLink="/free-people" (click)="closeMenu()">Стати волонтером</a>
           <a routerLink="/adopt" (click)="closeMenu()">Усиновити тваринку</a>
           <a routerLink="/"(click)="closeMenu()">Допомогти речами</a>
-          <a routerLink="/"(click)="closeMenu()">Подарувати дім</a>
         </div>
       </li>
       <li class="nav-item "><a class="nav-link" routerLink='/donate'>Донат</a></li>
@@ -113,7 +112,7 @@
     <input type="text" [(ngModel)]="searcshelter">  <button (click)="findshelter()">Пошук</button>
 </div> -->
 
-  <div id="map" style="width: 90%; height: 700px; border-radius: 17px;"></div>
+  <div id="map" style="width: 90%; height: 650px; border-radius: 17px;"></div>
 
 </div>
 
@@ -138,7 +137,7 @@
           <li><a routerLink="/free-people">Стати волонтером</a></li>
           <li><a routerLink="/adopt">Усиновити тваринку</a></li>
           <li><a routerLink="/">Допомогти речами</a></li>
-          <li><a routerLink="/gifthouse">Подарувати дім</a></li>
+          <!-- <li><a routerLink="/gifthouse">Подарувати дім</a></li> -->
         </ul>
     </div>
 
