--- a/src/frontend/src/app/adopt/adopt.component.css
+++ b/src/frontend/src/app/adopt/adopt.component.css
@@ -1,5 +1,6 @@
 *{
-    margin:  20px 20px 20px 20px;
+    /* margin:  20px 20px 20px 20px; */
+    padding: 10px 10px 10px 10px;
 }
 
 body {
@@ -45,4 +46,22 @@ button:hover{
     background-color: #d97b00;
     transition: 0.2s ease-in-out;
     
+}
+@media (max-width: 992px) {
+    .volonter { width: 600px;}
+}
+
+@media (max-width: 768px) {
+    .volonter { width: 90%;  padding: 15px; }
+}
+
+@media (max-width: 576px) {
+    .volonter {
+        width: 95%;
+        padding: 10px;
+    }
+    
+    input, select, button {
+        font-size: 14px;
+    }
 }
