--- a/src/frontend/src/app/blog-and-news/blog-and-news.component.html
+++ b/src/frontend/src/app/blog-and-news/blog-and-news.component.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+  <button class="scroll-to-top" (click)="scrollToTop()"  [class.show]="isScrollToTopVisible">↑</button>
 
 <div class="Blog">
   <!-- <h1>Блог</h1> -->
