--- a/src/frontend/src/app/donate/donate.component.html
+++ b/src/frontend/src/app/donate/donate.component.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+  <button class="scroll-to-top" (click)="scrollToTop()"  [class.show]="isScrollToTopVisible">↑</button>
 
   <div class="shelters-container">
     <h2>Притулки</h2>
