--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.css
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.css
@@ -5,6 +5,7 @@ body {
     display: flexbox;
     background-color: #f9f9f9;
 }
+.Id_shelter{display: none;}
 .Name_shelter{
   display: flex;
   justify-content: center;
@@ -20,8 +21,6 @@ body {
   color: #f9f9f9;
   background-color: #fc8f00;
   border-radius: 100%;
-    
-  
 }
 /* .animal-card .buttonn:hover{   
     background-color: #e38100;
@@ -98,7 +97,7 @@ body {
 /* .V{max-width: 140px;}    .S{ max-width: 146px;}   .P{max-width: 273px;} */
 
 /* /////////////////////////////////////////////////////////////////////////////////////// */
-.animals-container  .animal-cards{margin: auto 170px;}  
+.animals-container  .animal-cards{margin: auto 100px; display:flex;justify-content: center; margin-bottom: 10px;}  
 /* .animals-container {margin-top: 100px;} */
 
   .animals-container h2 {
@@ -109,25 +108,21 @@ body {
   .animals-container .pagination { margin: 25px auto;}
     
   .animal-cards {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-auto-rows: minmax(500px, auto); 
-    gap: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
   }
   
   .animal-card {
-
-    position: relative;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    border-radius: 20px;
-
-    transition: transform 0.2s; 
-   
-    
+    width: 359px; /* Ширина картки */
+    /* padding: 10px; */
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.2s;
+    overflow: hidden; /* Сховати все, що виходить за рамки картки */
+    position: relative; /* Для позиціонування зображення */
   }
-.animal-card:nth-child(2){ grid-column: 2;}
-.animal-card:nth-child(3){grid-column: 3;}
+  
 
   .animal-card img {
     width: 100%; 
@@ -313,3 +308,99 @@ body {
   }
 
   
+
+@media (max-width: 1150px) {
+  .animals-container .pagination { margin: 25px auto;}
+  .pagination {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 37%; 
+  }
+.close-button2{height: 45px; width: 45px; position: absolute; right: -10px; top: -10px;}
+.ward-content{ height: 95%; width: 95%; overflow-x:scroll; }
+.close-button1{height: 45px; width: 45px; position: absolute; right: 5px; top: 0px;}
+.adopt-content{ height: 95%; width: 95%; overflow-x:scroll;}
+}
+@media (min-width: 320px) and (max-width: 995px) {
+ 
+}
+
+
+@media (min-width: 768px) and (max-width: 995px) {
+  /* .animals-container  .animal-cards{margin: auto 0px;}   */
+  .animal-cards { gap: 40px; }
+  .animal-card { width: 340px; /* Ширина картки */}
+.animals-container  .animal-cards{margin: auto 60px;}  
+.sidebar {max-width: 100%; max-height: 500px;}
+/* .animals-container .pagination { margin: 25px auto;} */
+.pagination {width: 40%; }
+.animal-card .info_about_pet {display: flex;  gap: 10px;font-family: 'e-ukrL';   font-size: 14px;padding-left: 5px;line-height: 0.4cm;}
+.animal-card img {  height: 200px; }
+.animal-card .buttonn{bottom: 75px;  right: 10px; }
+}
+
+@media (max-width: 860px) {
+  .animal-cards { gap: 20px; }
+  .animal-card { width: 270px; /* Ширина картки */}
+.animals-container  .animal-cards{margin: auto 60px;}  
+.sidebar {max-width: 100%; max-height: 500px;}
+/* .animals-container .pagination { margin: 25px auto;} */
+.pagination {width: 40%; }
+.animal-card .info_about_pet {
+  display: flex; 
+  gap: 10px;
+  font-family: 'e-ukrL';  
+  font-size: 14px;
+  padding-left: 5px;
+  line-height: 0.4cm;
+}
+.animal-card img {  height: 200px; }
+.animal-card .buttonn{bottom: 75px;  right: 10px; }
+.close-button2{height: 45px; width: 45px; position: absolute; right: -10px; top: -10px;}
+.ward-content{ height: 85%; width: 95%; overflow-x:scroll;}
+.close-button1{height: 45px; width: 45px; position: absolute; right: 5px; top: 0px;}
+.adopt-content{ height: 85%; width: 95%; overflow-x:scroll;}
+}
+
+@media (max-width: 668px) {
+  .animal-cards { gap: 40px; }
+  .animal-card { width: 259px; /* Ширина картки */}
+  .pagination { width: 65%;}
+  .close-button,.close-button1,.close-button2{height: 45px; width: 45px; position: absolute; right: -20px; top: -20px;}
+}
+
+
+@media (max-width: 426px) {
+  .animals-container  .animal-cards{margin: auto 0px;}  
+  .animal-cards { gap: 40px; }
+  .animal-card { width: 259px; /* Ширина картки */}
+  .pagination { width: 100%;}
+  .sidebar { max-width: 100%;max-height: 320px; }
+  .close-button1{height: 45px; width: 45px; position: absolute; right: 5px; top: 0px;}
+  .adopt-content h1{line-height: 1.0cm;}
+  .adopt-content{ height: 95%; width: 95%; overflow-x:scroll;}
+  .adopt{display: flex;flex-direction: column;}
+
+  .close-button2{height: 45px; width: 45px; position: absolute; right: -10px; top: -10px;}
+  .ward-content{ height: 95%; width: 95%; overflow-x:scroll; }
+  .ward-content h1{line-height: 1.0cm;   }
+  .ward{ display: flex; flex-direction: column;}
+}
+
+
+@media (max-width: 375px) {
+  .animal-cards {gap: 40px; }
+  .animal-card {width: 259px; /* Ширина картки */}
+}
+
+
+@media (max-width: 320px) {
+  .animal-cards { gap: 40px; }
+  .animal-card { width: 259px; /* Ширина картки */}
+  .animal-card .info_about_pet { font-size: 11px; line-height: 0.2cm;}
+  .circle{width: 8px; height: 8px; margin-top: 0px;}
+  .animal-card .buttonn{bottom: 55px;  right: 10px; }
+  .animal-card .info_about_pet {gap: 6px;}
+}
