--- a/src/frontend/src/app/free-people/free-people.component.css
+++ b/src/frontend/src/app/free-people/free-people.component.css
@@ -1,5 +1,6 @@
 *{
-    margin:  20px 20px 20px 20px;
+    /* margin:  20px 20px 20px 20px; */
+    padding: 10px 10px 10px 10px;
 }
 
 body {
@@ -25,11 +26,13 @@ div>h1{
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);    
    margin: 50px auto;
+
 }
 
 .formvolonter{
     display: flex;
     flex-direction: column;
+    
 }
 .formvolonter h1{
     text-align: center;
@@ -54,4 +57,29 @@ button:hover{
     background-color: #d97b00;
     transition: 0.2s ease-in-out;
     
+}
+
+/* @media (max-width: 1200px) {
+    .volonter {
+        width: 700px;
+    }
+} */
+
+@media (max-width: 992px) {
+    .volonter { width: 600px;}
+}
+
+@media (max-width: 768px) {
+    .volonter { width: 90%;  padding: 15px; }
+}
+
+@media (max-width: 576px) {
+    .volonter {
+        width: 95%;
+        padding: 10px;
+    }
+    
+    input, select, button {
+        font-size: 14px;
+    }
 }
