--- a/src/frontend/src/app/thigns/thigns.component.css
+++ b/src/frontend/src/app/thigns/thigns.component.css
@@ -8,9 +8,10 @@ body {
   font-family: 'e-ukr';
   width: 100%;
   height: 100%;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   margin-top: 20px;
   color: #333333;
+  
 }
 
 .title1, .title2 {
@@ -54,7 +55,7 @@ ul {
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 20px auto;
-  max-width: 1200px;
+  max-width: 1000px;
 }
 
 /* Загальні стилі для карток */
@@ -67,6 +68,7 @@ ul {
   padding: 20px; /* Відступ всередині картки */
   flex: 1 1 calc(45% - 20px); /* Для великих екранів */
   max-width: calc(45% - 20px); /* Для великих екранів */
+  
 }
 
 /* Текст у картках */
@@ -129,7 +131,8 @@ ul {
   }
 
   .help1, .help2, .help3, .help4 {
-    flex: 1 1 100%; /* Розтягнути картки на всю ширину */
-    max-width: 100%; /* Максимальна ширина 100% */
+    flex: 1 1 100%;
+    max-width: 100%; 
   }
 }
+
