--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -40,7 +40,7 @@
           <a routerLink="/free-people" >Стати волонтером</a>
           <a routerLink="/adopt">Усиновити тваринку</a>
           <a routerLink="/thigns">Допомога</a>
-          <a routerLink="/for-all-shelter">Подарувати дім</a>
+<!--          <a routerLink="/for-all-shelter">Подарувати дім</a>-->
         </div>
       </li>
       <li class="nav-item "><a class="nav-link" routerLink='/donate'>Донат</a></li>
