--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Document</title> -->
-    
+
 </head>
 <body>
     <h1 class="Name_shelter">{{shelter_Name}}</h1>
     <h1 class="Id_shelter">{{shelter_ID}}</h1>
     <div class="animals-container">
-      
+
         <div class="animal-cards">
-          
+
           <div class="sidebar" >
             <div class="filter-group">
                 <label>Тип тварини</label>
                 <button [ngClass]="{'active': activeFilters['type'].length === 0 || activeFilters['type'].includes('')}" (click)="toggleFilter('type', '')">Усі</button>
-                <button [ngClass]="{'active': activeFilters['type'].includes('dog')}" (click)="toggleFilter('type','dog')">Песики</button>
-                <button [ngClass]="{'active': activeFilters['type'].includes('cat')}"(click)="toggleFilter('type','cat')">Котики</button>
-                <button [ngClass]="{'active': activeFilters['type'].includes('rabbit')}"(click)="toggleFilter('type','rabbit')">Кролик</button>
+                <button [ngClass]="{'active': activeFilters['type'].includes('Собака')}" (click)="toggleFilter('type','Собака')">Песики</button>
+                <button [ngClass]="{'active': activeFilters['type'].includes('Кіт')}" (click)="toggleFilter('type','Кіт')">Котики</button>
+                <button [ngClass]="{'active': activeFilters['type'].includes('Кролик')}" (click)="toggleFilter('type','Кролик')">Кролик</button>
             </div>
             <div class="filter-group">
                 <label>Стать</label>
@@ -50,7 +50,7 @@
                 <button [ngClass]="{'active' :activeFilters['steril'].includes('Стерелізована') }" (click)="toggleFilter('steril','Стерелізована')" class="S">Стерелізована</button>
                 <button [ngClass]="{'active' :activeFilters['need_help'].includes('Потребує особливого догляду') }" (click)="toggleFilter('need_help','Потребує особливого догляду')" class="P">Потребує особливого догляду</button>
             </div>
-            
+
         </div>
 
           <div *ngFor="let animal of animals"
@@ -66,12 +66,12 @@
             <div class="info_about_pet">
                 <p>Потребує особливого догляду</p>
             </div>
-            
+
             <div class="info_about_pet">
                 <p>Вакцинована</p>
                 <div class="circle"></div>
                 <p>Стерелізована</p>
-                  
+
              </div>
              <div class="buttonn" (click)="selectAnimal(animal)">
                <svg width="50" height="50" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +81,7 @@
               </svg></div>
           </div>
         </div>
-       
+
        <div class="pagination">
           <button (click)="previousPage()" [disabled]="currentPage === 1" class="previous">Назад</button>
           <span>Сторінка {{ currentPage }} з {{ totalPages }}</span>
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      
+
       <!-- Модальне вікно для детальної інформації про тварину -->
       <div *ngIf="selectedAnimal" class="modal">
         <div class="modal-content">
@@ -102,78 +102,76 @@
           <p><strong>Розмір: </strong> {{ selectedAnimal.size }}</p>
           <p><strong>Опис: </strong> {{ selectedAnimal.description }}</p>
           <p><strong>Місто: </strong> {{ selectedAnimal.city }}</p>
-          <p><strong>Назва притулку: </strong></p> 
+          <p><strong>Назва притулку: </strong></p>
         </div>
-         
+
           <div class="buttonForAdoptAndWard">
             <button (click)="openWardForm()" class="Adoptbtn">Взяти під опіку</button>
              <button (click)="openAdoptForm()" class="Wardbtn">Усиновити</button>
           </div>
-         
+
         </div>
       </div>
-      
+
       <div *ngIf="isAdoptFormOpen" class="modalAdopt">
       <div class="adopt-content">
         <span (click)="closeAdoptForm()" class="close-button1">&times;</span>
         <h1>Форма заявки на усиновлення тварини</h1>
-      
-        <form (ngSubmit)="ModalAdopt()" class="adopt"> 
+
+        <form (ngSubmit)="ModalAdopt()" class="adopt">
          <label for="name">Ваше ім'я:</label>
          <input type="text" id="firstName" [(ngModel)]="firstName" name="firstName" placeholder="Введіть ваше ім'я" required>
-      
+
          <label for="surname">Ваше прізвище:</label>
          <input type="text" id="lastName"[(ngModel)]="lastName" name="lastName" placeholder="Введіть ваше прізвище" required>
-      
-         <label for="email">Email:</label>
-         <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
-      
+
+         <label for="email1">Email:</label>
+         <input type="email" id="email1" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
+
          <label for="phone">Телефон:</label>
          <input type="tel" id="contactNumber" [(ngModel)]="contactNumber"  name="contactNumber" placeholder="Введіть ваш номер телефону" required>
-      
-      
+
+
          <label for="exp">Чи маєте досвід догляду за тваринами?</label>
           <select id="experience" [(ngModel)]="experience" name="experience" required>
            <option value="">Маєте досвід догляду за тваринами?</option>
            <option value="yes">Так</option>
            <option value="no">Ні</option>
           </select>
-         
-            <input type="hidden" [(ngModel)]="animalName" name="animalName" [value]="isAdoptFormOpen.name">
-            <input type="hidden" [(ngModel)]="animalAge" name="animalAge" [value]="isAdoptFormOpen.age">
-            <input type="hidden" [(ngModel)]="animalSex" name="animalSex" [value]="isAdoptFormOpen.sex">
-            <input type="hidden" [(ngModel)]="animalSize" name="animalSize" [value]="isAdoptFormOpen.size">
-            <input type="hidden" [(ngModel)]="typeOfAnimal" name="typeOfAnimal" [value]="isAdoptFormOpen.type">
-            <!-- <input type="hidden" [(ngModel)]="shelter" name="shelter" [value]="isAdoptFormOpen.shelter"> -->
-            <!-- <input type="hidden" [(ngModel)]="City" name="City" [value]="isAdoptFormOpen.city"> -->
-          
-      
+
+          <input type="hidden" [(ngModel)]="animalName" name="animalName" >
+          <input type="hidden" [(ngModel)]="animalAge" name="animalAge" >
+          <input type="hidden" [(ngModel)]="animalSex" name="animalSex" >
+          <input type="hidden" [(ngModel)]="animalSize" name="animalSize" >
+          <input type="hidden" [(ngModel)]="typeOfAnimal" name="typeOfAnimal" >
+
+
           <button type="submit">Надіслати заявку</button>
        </form>
-      
+
       </div>
       </div>
-      
-      
+
+
       <div *ngIf="isWardFormOpen" class="modalWard">
         <div class="ward-content">
           <span (click)="closeWardForm()" class="close-button2">&times;</span>
           <h1>Форма заявки на опіку</h1>
-        
-          <form (ngSubmit)="ModalWard()" class="ward"> 
+
+          <form (ngSubmit)="ModalWard()" class="ward">
             <label for="name">Ваше ім'я:</label>
             <input type="text" id="name" [(ngModel)]="firstName" name="firstName" placeholder="Введіть ваше ім'я" required>
-         
+
             <label for="surname">Ваше прізвище:</label>
             <input type="text" id="surname"[(ngModel)]="lastName" name="lastName" placeholder="Введіть ваше прізвище" required>
-         
-            <label for="email">Email:</label>
-            <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
-         
+
+            <label for="email2">Email:</label>
+            <input type="email" id="email2" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
+
             <label for="phone">Телефон:</label>
             <input type="tel" id="phone" [(ngModel)]="contactNumber"  name="contactNumber" placeholder="Введіть ваш номер телефону" required>
-        
-        
+
+
            <label for="exp">Чи маєте досвід догляду за тваринами?</label>
             <select id="exp" [(ngModel)]="experience" name="experience" required>
              <option value="">Маєте досвід догляду за тваринами?</option>
@@ -186,15 +184,13 @@
             <input type="hidden" [(ngModel)]="animalSex" name="animalSex" >
             <input type="hidden" [(ngModel)]="animalSize" name="animalSize" >
             <input type="hidden" [(ngModel)]="typeOfAnimal" name="typeOfAnimal" >
-              <!-- <input type="hidden" [(ngModel)]="shelter" name="shelter" [value]="isWardFormOpen.shelter"> -->
-              <!-- <input type="hidden" [(ngModel)]="City" name="City" [value]="isWardFormOpen.city"> -->
-            
-        
+
+
             <button type="submit">Надіслати заявку</button>
          </form>
-        
+
         </div>
         </div>
-      
+
 </body>
 </html>
