--- a/src/frontend/src/app/thigns/thigns.component.css
+++ b/src/frontend/src/app/thigns/thigns.component.css
@@ -3,61 +3,51 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: 'e-ukr';
   width: 100%;
   height: 100%;
-  /* margin-left: 20px; */
+  margin-left: 20px;
   margin-top: 20px;
   color: #333333;
-  
 }
-
 .title1, .title2 {
   text-align: center; /* Центрування заголовків */
   margin-bottom: 20px;
 }
-
 .title1 {
   display: grid;
   place-content: center;
   margin-bottom: 10px;
   font-size: xx-large;
 }
-
 .title2 {
   display: grid;
   place-content: center;
   margin-bottom: 10px;
   font-size: large;
 }
-
 .col1, .col2 {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 20px;
 }
-
 p {
   margin: 0;
 }
-
 ul {
   list-style-type: disc;
   margin: 10px 0;
   padding-left: 20px; /* Відступ для списків */
 }
-
 /* Секції допомоги */
 .col1, .col2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 20px auto;
-  max-width: 1000px;
+  max-width: 1200px;
 }
-
 /* Загальні стилі для карток */
 .help1, .help2, .help3, .help4 {
   background: #fff;
@@ -68,20 +58,16 @@ ul {
   padding: 20px; /* Відступ всередині картки */
   flex: 1 1 calc(45% - 20px); /* Для великих екранів */
   max-width: calc(45% - 20px); /* Для великих екранів */
-  
 }
-
 /* Текст у картках */
 .help1 p, .help2 p, .help3 p, .help4 p {
   font-weight: bold;
   margin-bottom: 10px;
   text-align: justify; /* Вирівнювання тексту по ширині */
 }
-
 .help1 li, .help2 li, .help3 li, .help4 li {
   margin: 5px 0;
 }
-
 /* Стилі для футера */
 .footer-container {
   display: flex;
@@ -94,7 +80,6 @@ ul {
   width: 100%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
 .footer-container ul {
   list-style: none;
   margin: 0;
@@ -102,37 +87,29 @@ ul {
   text-align: center;
   width: 100%;
 }
-
 .footer-container li {
   margin: 10px 0;
   font-size: 1rem;
 }
-
 .footer-container img {
   width: 50px;
   height: auto;
   margin: 10px auto;
   display: block;
 }
-
 /* Адаптивність */
 @media (max-width: 768px) {
   .col1, .col2 {
     flex-direction: column;
     align-items: center;
   }
-
   .footer-container ul {
-    width: 100%;
-  }
-
+    width: 100%; }
   .footer-container li {
     font-size: 0.9rem;
   }
-
   .help1, .help2, .help3, .help4 {
-    flex: 1 1 100%;
-    max-width: 100%; 
+    flex: 1 1 100%; /* Розтягнути картки на всю ширину */
+    max-width: 100%; /* Максимальна ширина 100% */
   }
 }
-
