--- a/src/frontend/src/app/Admin/header/header.component.css
+++ b/src/frontend/src/app/Admin/header/header.component.css
@@ -8,47 +8,49 @@
 body {width: 100%;height: 100%;}
 
 header {
+  
   background-color: #01bfbf;
   padding: 6px;
   text-align: center;
   color: white;
   display: flex;
+  
 }
 
-h1 {
+/* h1 {
   font-size: 2rem;
   margin: 20px auto;
-}
+} */
 
 .nav-admin {
   font-family: "e-ukr";
   margin: 10px auto;
   text-align: center;
-  margin-right: 90px;
+  /* margin-right: 90px; */
 }
 
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  
 }
 
-/* nav ul .Descktop-admin  {
+ /* nav ul .Descktop-admin  {
   margin-right: 60px;
   z-index: 1;
-}
-
-nav ul .Descktop-admin .nav-item {
-  display: inline-block;
-  margin: 0 7px;
 } */
 
-nav ul li a {
+nav ul li  { display: inline-block;  margin-right: 30px;z-index: 1;}
+nav ul li a  {
   text-decoration: none;
   color: #ffffff;
   font-size: 1.1rem;
 }
 
+nav ul li a.active  {
+  border-bottom: solid;
+}
 nav ul li a:hover {
   color: #000000;
   transition: 0.2s ease-in-out;
