--- a/src/frontend/src/app/Admin/header/header.component.html
+++ b/src/frontend/src/app/Admin/header/header.component.html
@@ -4,11 +4,13 @@
   
       <ul>
         <div class="Descktop-admin">
-        <li class="nav-item "><a class="nav-link" routerLink='shelteradmin'>Притулки</a></li>
-        <!-- <li class="nav-item "><a class="nav-link" >Волонтерство</a></li>
-        <li class="nav-item "><a class="nav-link" routerLink='/donate'>Донат</a></li>
-        <li class="nav-item "><a class="nav-link" routerLink='/about'>Про нас</a></li>
-        <li class="nav-item "><a class="nav-link" routerLink='/blog-and-news'>Блог та новини</a></li> -->
+        <li class="nav-item "><a class="nav-link" routerLink='shelteradmin'  routerLinkActive="active">Притулки</a></li>
+        <li class="nav-item "><a class="nav-link" routerLink='tabel-animals'  routerLinkActive="active">Тваринки</a></li>
+        <li class="nav-item "><a class="nav-link" routerLink='usersadmin'  routerLinkActive="active">Користувачі</a></li>
+        <li class="nav-item "><a class="nav-link" routerLink='volonteradmin'  routerLinkActive="active">Заявки Волонтерства</a></li>
+        <li class="nav-item "><a class="nav-link" routerLink='adopradmin'  routerLinkActive="active">Заявки Усиновлення</a></li>
+        <li class="nav-item "><a class="nav-link" routerLink='wardadmin'  routerLinkActive="active">Заявки Опіки</a></li>
+        <li class="nav-item "><a class="nav-link" routerLink='blogadmin'  routerLinkActive="active">Блог</a></li>
         </div>
       </ul>
     
